Fix search: use visibility hidden instead of display none

--- a/public/assets/css/front.css
+++ b/public/assets/css/front.css
@@ -1066,7 +1066,7 @@ a [class*="far"] {
 }
 
 .search-wrapper.active .search-btn {
-  display: none;
+  visibility: hidden;
 }
 
 .search-box.active .search-icon {
